--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" >
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"  alt=" A picture of a lion">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"  
+    alt=" A picture of a lion"
+    title =" A lion ">
+
+
   </body>
 </html>
